tests/poof/fixtures/errors/error3.cpp
struct foo
{
  int bar;
};

poof( for_datatypes(all).exclude(foo bar) )


